Changed: 3 column to 6 column data

--- a/src/components/DataTableAdmin/index.scss
+++ b/src/components/DataTableAdmin/index.scss
@@ -5,7 +5,7 @@
   .table-header {
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 2fr;
+    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr;
     justify-content: space-between;
     width: fit-content;
     color: #0000ff;
@@ -20,14 +20,15 @@
       align-items: center;
       justify-content: center;
       text-align: center;
-      font-size: 18px;
+      font-size: 16px;
       text-transform: uppercase;
+      text-wrap: nowrap;
       &:last-child {
         border: none;
       }
     }
     span.draw-time {
-      font-size: 22px;
+      font-size: 20px;
       text-transform: none;
     }
   }
@@ -35,12 +36,12 @@
 
 @media screen and (max-width: 768px) {
   .table .table-header {
-    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 2fr;
+    grid-template-columns: 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr 2fr;
     span {
-      font-size: 8px;
+      font-size: 6px;
     }
     span.draw-time {
-      font-size: 10px;
+      font-size: 8px;
     }
   }
 }
