--- a/src/components/TableRow/index.scss
+++ b/src/components/TableRow/index.scss
@@ -1,7 +1,7 @@
 .table-body-1 {
   width: 100%;
   display: grid;
-  grid-template-columns: 2fr 2fr 2fr 2fr;
+  grid-template-columns: 3fr 2fr 2fr 2fr 2fr 2fr 2fr;
   justify-content: space-between;
   width: fit-content;
   color: #000;
@@ -31,14 +31,14 @@
 
 @media screen and (max-width: 768px) {
   .table-body-1 {
-    grid-template-columns: 2fr 2fr 2fr 2fr;
+    grid-template-columns: 3fr 2fr 2fr 2fr 2fr 2fr 2fr;
     span {
-      font-size: 8px;
+      font-size: 6px;
       padding-top: 3px;
       padding-bottom: 3px;
     }
     span.draw-time {
-      font-size: 10px;
+      font-size: 8px;
     }
   }
 }
