--- a/src/components/DataTable/index.scss
+++ b/src/components/DataTable/index.scss
@@ -5,7 +5,7 @@
   .table-header-1 {
     width: 100%;
     display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr;
+    grid-template-columns: 3fr 2fr 2fr 2fr 2fr 2fr 2fr;
     justify-content: space-between;
     width: fit-content;
     color: #0000ff;
@@ -22,6 +22,7 @@
       text-align: center;
       font-size: 18px;
       text-transform: uppercase;
+      text-wrap: nowrap;
       &:last-child {
         border: none;
       }
@@ -35,12 +36,12 @@
 
 @media screen and (max-width: 768px) {
   .table .table-header-1 {
-    grid-template-columns: 2fr 2fr 2fr 2fr;
+    grid-template-columns: 3fr 2fr 2fr 2fr 2fr 2fr 2fr;
     span {
-      font-size: 8px;
+      font-size: 6px;
     }
     span.draw-time {
-      font-size: 10px;
+      font-size: 8px;
     }
   }
 }
