--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 html,
 body {
-  overflow-x: hidden;
+  overflow-x: auto;
   margin: 0;
   padding: 0;
   font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
